<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/title"
        android:layout_width="200dp"
        android:layout_marginLeft="2dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_marginTop="5dp"
        android:text="@string/offers_list_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/remaining"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/title"
        android:text="@string/offers_list_remaining"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:maxLines="3"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/offers_list_description" />

    <TextView
        android:id="@+id/validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/description"
        android:text="@string/offers_list_validity"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>
